Mapper yay
Now I gotta fix the bugs caused by removing status